@@ -3,10 +3,12 @@ AUX calculate-client-2.1.17-r2.patch 3716 RMD160 bc5d39cff353c4dd00344c04fcf6533
 DIST calculate-client-2.1.11.tar.bz2 76735 RMD160 a31fff0135103bd32aee1c903eeae2b059e31c0b SHA1 1a1f05ab8bcc0aeb04bbf10371bec9aaad09cf18 SHA256 3f3410b697e9ebf4965bf0886b3ad8c40815c2ee464fdaaa90e220fb5b51f723
 DIST calculate-client-2.1.17.tar.bz2 91859 RMD160 376702b4535debc328276cbbd3bb5006a2dfff89 SHA1 9b3d5a5992d96b0104c17f062fcc62f671baf1d5 SHA256 f17c948f852a6d69736f7080a74d203c5720a12517f65265868d8b40ef9d83a8
 DIST calculate-client-2.1.18.tar.bz2 180377 RMD160 70355a6092715c46e57a68bdd10592ac8e2a3ba7 SHA1 5f754d7d707e57d83b121370026c62c75f5b0615 SHA256 4f1c05128c4b2aac6b93857c3c466ecbed0236146b53caed2916bccab437806a
+DIST calculate-client-2.2.0.0_rc1.tar.gz 36888 RMD160 10914bd7ae7d35438a0871ef662202867a88baad SHA1 a64cbf0fbeec553101acfd6450a4d2ceacfcc136 SHA256 2552f116f86198e49a25875003c0bee9433c584a66842ae966ace2d478e65b9d
 EBUILD calculate-client-2.1.11.ebuild 1666 RMD160 1b9daee165695618b7404e51e58436b04310f744 SHA1 63b0908f95087157bd20f340b9c85aea13f46adf SHA256 a1c36d830d38872afaa8c2d691af7a9453008d2448a4f8dda5000e2880b2f57c
 EBUILD calculate-client-2.1.17-r1.ebuild 1809 RMD160 9b2e60c8b48807d86273fc9b78b1c8db4c79cea5 SHA1 4862fd10526862f7baa047d790f117787dcedc9a SHA256 b53f9a16678d4be95a23afef2cf0997f6567b38e936ec9590e3feeda66df45fc
 EBUILD calculate-client-2.1.17-r2.ebuild 1896 RMD160 01fb62dab724750b7514cb57353214a2d4f75337 SHA1 a43f4873532be1ca1edae47828fc22b0f164b88c SHA256 3da7be8962541bb447e667de5e3e2c67f06beda528b3282af4741a97265f6312
 EBUILD calculate-client-2.1.18.ebuild 1695 RMD160 91c6a5f07302640ad649824ed10d6495a724df58 SHA1 6e7c10b192a02f0daeb705d93585cd5db9fbff0d SHA256 ebc7776a3c62d3d37c6d36e02d78b1ceffea826229a213047371a6fde645f84f
+EBUILD calculate-client-2.2.0.0_rc1.ebuild 1823 RMD160 06b97d0f1402dc8dfcb091d9eb8d2ae0609e7eb5 SHA1 6ff60c27a305d3ea8fb68d96fd2c9d84a1c5ffab SHA256 1418637161a68f070b14638eeb8fa2321983fc7cf3593178b5c4a7b0be3a5211
 EBUILD calculate-client-2.2.9999.ebuild 1712 RMD160 122d6998eaf7a79ebefc7d9b163a78fd0c05fdd8 SHA1 e19444479c97d3c21064c09f731c67d80382ab66 SHA256 591e33e91632d9ef7d96c5c7bcecf82ef57af5e16b1ac61ee5eba3c9641522ee
-MISC ChangeLog 4076 RMD160 29d86a10b576d0c3927de63817ba423c1c708f83 SHA1 6579c13948387966ea5923e7edd94a00279f0f38 SHA256 17dfdc214b9a1375342838ed5f95007332ede7d7f575d68254d7c74eebdd3ecf
+MISC ChangeLog 4280 RMD160 2fbb92f64e741a09b76538db16bf5df18746910c SHA1 963d5953969505a351ca71a5aee1121601bdca07 SHA256 8d568cff7457ddd13849c776db939829b67115d13f210544d0c6bbec1f00a4a8
 MISC metadata.xml 310 RMD160 ed986dbc43c958bd57e0fb73749ee09167ee0221 SHA1 4007f716df1aa85ec65d926f246663effc382384 SHA256 5023605d36dcbb5d5fe1b1ac54f7125a4087479b5168601075a8050ed51c38c2
