@@ -1,3 +1,5 @@
+DIST calculate-desktop-2.2.0.0_rc1.tar.gz 208678 RMD160 d8cc52cc261cfd3998eb7d0502c0cce305c72e85 SHA1 e336d69ab7c40fc9d149b16b889a0fcefb2c7c3c SHA256 10f1ffff1b20a4300d27aa2ef952edb0ce954242e1d5465544df1f1565803b91
+EBUILD calculate-desktop-2.2.0.0_rc1.ebuild 1207 RMD160 f2dde23d8049b0a2cf37c904ab3d9e20277bafe6 SHA1 4b366fc9ff6a515cb55e80791904c3f6a816e919 SHA256 4c56db35dd7a48d2245686938c783d99bd82fe5e5eaffab42e94f80bb2194d37
 EBUILD calculate-desktop-2.2.9999.ebuild 1100 RMD160 0295104ab8a748fd45e5bb7ca8809b5ef1f0bb74 SHA1 353f48195e96077eff505505be10dac2b1a0157b SHA256 244b7cc8d1969b840dbef0048031831c623842850185713d55e36df3fb2c1b67
-MISC ChangeLog 775 RMD160 ea2e8f68ba48e47167b2ce313ece19f3d7033196 SHA1 40d3378f186f6dc91cdc78a7789b33532cdd2f34 SHA256 19c99a43a8dcf4499fe717163e856a8b4deae0b97c2dde83f4adf533e7ef9f51
+MISC ChangeLog 982 RMD160 a5ebcd4c49d7f081dbd670b9fbb7eef7a1e07fbe SHA1 738e9a3f4d980297c0e925395acd64ec46baf431 SHA256 a207e3b7ffa38a64a23343130d863eeef6831c8e1729b34c678f5045e9ed8ab8
 MISC metadata.xml 315 RMD160 36a1a8d03aed0a483def83e076f484a64d452a8b SHA1 f6e70641eab777d2417d8a7600e8d3f09f53f96f SHA256 67fea0b1af7d10c0f86e72ab40f527e99c6f81f7aace4716344bdfb97c769a18
