@@ -2,11 +2,13 @@ DIST calculate-lib-2.1.10.tar.bz2 61392 RMD160 e90f6d218bf98ddbc89197c9fe2e8042b
 DIST calculate-lib-2.1.7.tar.bz2 59734 RMD160 61aad4dcb79a3c7b4dabbb38368ab3625c9fd495 SHA1 68f43a24ad5caa8018c984c610934046c6c1c54b SHA256 bd41dd5e8a850837df412ad4a6f700f65df7adfce17df02b9d90a56d7e19fc7f
 DIST calculate-lib-2.1.8.tar.bz2 61178 RMD160 4a4ed063a9b4d3b82723f5f6eb046c97ad9fcda1 SHA1 93eb20057afff6e98c409388e1259a3ad078bb7a SHA256 ef8e315001663da7a45e69b82dc7c158fb0e10bd567efa95bf8a654ed441144a
 DIST calculate-lib-2.1.9.tar.bz2 61280 RMD160 ceb6bee74a9a9c47eee1c562a9700241e601f931 SHA1 0d49ac5f3607d9a43d9b8a0bb2afb41a715ea94f SHA256 a40c461ee6e093c2862f9431d2d60049d44c8a4ff12122bff6956c0fa3a46693
+DIST calculate-lib-2.2.0.0_rc1.tar.gz 107515 RMD160 e37ef75f080b84cc0739c52e3152f5e0002204fa SHA1 bf7bd4ae11ab14854f8d749cf94d305d6da29563 SHA256 45cad4edd46ac2951609a5e1b71146eba27478ce8a8d6afb6a4c38d01fba882a
 EBUILD calculate-lib-2.1.10.ebuild 578 RMD160 44eda1d0ae1b1057c200380fc81786f31fd3ce2b SHA1 c7dee498dc17cf71dcef862c17be6b282f4bb63e SHA256 08244fbc8ba1fff546a96a7869708647a39e781c468d71b456821a22c59c4c56
 EBUILD calculate-lib-2.1.7.ebuild 578 RMD160 673b894f3992ce17a6f31e4deb292c647eb96690 SHA1 f73944ea64b1d3a1f9d1027be32efb2e22a4a796 SHA256 2406070a830ac39f4701ece61d7b2d7d5a220e057db19078b23ce50b3649dbbf
 EBUILD calculate-lib-2.1.8.ebuild 578 RMD160 a76c3b9ab13bf4f69d002904d41b01889958adf9 SHA1 91cfabb263365be7800296969a48abfc831f0d8f SHA256 c796f7dfbc321c6580706b63780321efaaa50d9e7fc363bdfef6890365166d03
 EBUILD calculate-lib-2.1.9.ebuild 578 RMD160 44eda1d0ae1b1057c200380fc81786f31fd3ce2b SHA1 c7dee498dc17cf71dcef862c17be6b282f4bb63e SHA256 08244fbc8ba1fff546a96a7869708647a39e781c468d71b456821a22c59c4c56
+EBUILD calculate-lib-2.2.0.0_rc1.ebuild 574 RMD160 ae53f928ef25a91f0c41b4f2ae1dbef308fdb3f9 SHA1 31166a348009def75f4e80aa533ee08818d87a79 SHA256 4487b8c9f4a3e925cfb1f9c7a1459b7a0baa685728303e939d1e7e771b61a598
 EBUILD calculate-lib-2.2.9999.ebuild 467 RMD160 00555291e728b2b516083837a953b79aa61ce928 SHA1 9f52860b5fb3390fc6105bc3fe9a64fba4447728 SHA256 b4afcde7f0d86f8d09f7aec455b1abf1c6f72cb2f3c3a89e640b48843a20a7a3
 EBUILD calculate-lib-9999.ebuild 476 RMD160 e510e0aa98b7f6da9acc37197073cac0d5d6a47f SHA1 393c416fcfd77d6c05aea8932a7a1e3805aa926d SHA256 a9eee592ec352db7852e93ad33249072307051d3bda6cfdcd034ea9b96747578
-MISC ChangeLog 1436 RMD160 4c50ccc463dc4c71a8f144f69434a28a85989674 SHA1 39a761919f622b8b2504ab00b888df374cea6edb SHA256 c2e3cecbb312dbe7eeba9a7e1d24debcd6960b27b7412162a833d8c4646ff51c
+MISC ChangeLog 1631 RMD160 566c98771a7e22637369a76a87a5c3065bf7b5b2 SHA1 52f99d3aa93415d3fd1d2b5340848b6f843be8b8 SHA256 98f86ae8b2b3d1c5f41f457d8e505b9c9f25d2012c75b2e767f8ce36702bbc28
 MISC metadata.xml 303 RMD160 774b65ed76939d6878496ad6ef6451849bdced05 SHA1 7d08569697a290ede98c88ab59db3cdc3037bd15 SHA256 181519d9679fd9aee9a7a9806733a50728d3da0b1e0ad54f31499200f7f5c6ec
