@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-desktop-2.2.0.0_rc1 (21 Jun 2010)
+
+  21 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-desktop-2.2.0.0_rc1.ebuild:
+  Added first release candidate calculate-desktop-2.2.0.0.
+
   03 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
   calculate-desktop-2.2.9999.ebuild:
   Add message about restarting xdm.
