@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-lib-2.2.0.0_rc1 (21 Jun 2010)
+
+  21 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-lib-2.2.0.0_rc1.ebuild:
+  Added first release candidate calculate-lib-2.2.0.0.
+
   04 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
   calculate-lib-2.2.9999.ebuild, calculate-lib-9999.ebuild:
   Fix git path.
