@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-client-2.2.0.0_rc1 (21 Jun 2010)
+
+  21 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-client-2.2.0.0_rc1.ebuild:
+  Added first release candidate calculate-client-2.2.0.0.
+
   03 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
   -calculate-client-9999.ebuild:
   Removed live ebuild for calculate-client less 2.2.
